fix hover flicker

--- a/frontend/pulp/src/article/components.scss
+++ b/frontend/pulp/src/article/components.scss
@@ -76,8 +76,6 @@ body {
     right: -20px;
     top: -10px;
     height: 70px;
-    border-style: solid;
-    border-color: black;
   }
 
   .arrow-down {
